--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,47 +1,47 @@
 ### General
-baseURL = 'https://meridian-corp.org' # Enter your full production URL
-languageCode = 'fr-FR' # Default
-timeZone = 'Europe/Paris' # IANA timezone https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-title = 'Meridian Corp' # Site title used throughout site
+baseURL = 'https://site.meridian-corp.org' # Enter your full production URL
+languageCode = 'fr-FR'                     # Default
+timeZone = 'Europe/Paris'                  # IANA timezone https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+title = 'Meridian Corp'                    # Site title used throughout site
 
-defaultContentLanguage = 'fr' # Default
+defaultContentLanguage = 'fr'          # Default
 defaultContentLanguageInSubdir = false
 
 ### SEO, Analytics & 3rd-party
 enableRobotsTXT = true # To overwrite the theme's robots.txt, add your own in the /layouts/ directory
-rssLimit = -1 # -1 is unlimited RSS entries
+rssLimit = -1          # -1 is unlimited RSS entries
 # googleAnalytics = '' # Enter GA tracking ID to enable GA4
 # disqusShortname = '' # Enter Disqus shortname to enable comments
 
 ### Content & Publishing
 # Please see https://gohugo.io/getting-started/configuration/ for detailed explanations
-buildDrafts = false # Default
-buildExpired = false # Default 
-buildFuture = false # Default
-canonifyURLs = false # Default
-disableAliases = true # Set to true if using server (Netlify, .htaccess) for redirects instead of Hugo
-disableKinds = [] # Default
-enableEmoji = true # Use Emojis in content
-enableGitInfo = false # Default, enable to use git for lastmod (can be overwritten in frontmatter)
+buildDrafts = false            # Default
+buildExpired = false           # Default
+buildFuture = false            # Default
+canonifyURLs = false           # Default
+disableAliases = true          # Set to true if using server (Netlify, .htaccess) for redirects instead of Hugo
+disableKinds = []              # Default
+enableEmoji = true             # Use Emojis in content
+enableGitInfo = false          # Default, enable to use git for lastmod (can be overwritten in frontmatter)
 enableInlineShortcodes = false # Default, false is more security-friendly
-ignoreFiles = [] # Default
+ignoreFiles = []               # Default
 # newContentEditor = 'code' # Set VS Code as default editor
-paginate = 10 # Default
-paginatePath = 'page' # Default
+paginate = 10              # Default
+paginatePath = 'page'      # Default
 pluralizeListTitles = true # Default
-publishDir = 'public' # Default
-relativeURLs = false # Default
-summaryLength = 70 # Default
-titleCaseStyle = 'AP' # Default, other options: Chicago (slightly different) or Go (all first letters capitalized)
+publishDir = 'public'      # Default
+relativeURLs = false       # Default
+summaryLength = 70         # Default
+titleCaseStyle = 'AP'      # Default, other options: Chicago (slightly different) or Go (all first letters capitalized)
 
 ### Other
 archetypeDir = 'archetypes' # Default
-assetDir = 'assets' # Default
+assetDir = 'assets'         # Default
 
-contentDir = 'content' # Default
-dataDir = 'data' # Default
+contentDir = 'content'             # Default
+dataDir = 'data'                   # Default
 disableHugoGeneratorInject = false # Default
-disableLiveReload = false # Default
+disableLiveReload = false          # Default
 
 # Use this theme as git submodule
 theme = 'liftoff'
@@ -51,198 +51,198 @@ theme = 'liftoff'
 #     path = 'liftoff'
 
 [taxonomies]
-    tag = 'tags'
-    category = 'categories'    
-    series = 'series' # Allows you to create an organized series of posts (e.g. multi-part tutorial)
-    project-type = 'project types' # Categorize projects by type (e.g. client work, personal, open source, etc.)
+tag = 'tags'
+category = 'categories'
+series = 'series'              # Allows you to create an organized series of posts (e.g. multi-part tutorial)
+project-type = 'project types' # Categorize projects by type (e.g. client work, personal, open source, etc.)
 
 [permalinks]
-    [permalinks.page]
-        # e.g. /subsection/example-post instead of /posts/subsection/example-post
-        posts = '/:sections[last]/:slug/' # Removes 'posts' from the permalink structure for posts created under nested sub-sections
-    [permalinks.section]
-        # e.g. /subsection/ instead of /posts/subsection/
-        posts = '/:slug/'
+[permalinks.page]
+# e.g. /subsection/example-post instead of /posts/subsection/example-post
+posts = '/:sections[last]/:slug/' # Removes 'posts' from the permalink structure for posts created under nested sub-sections
+[permalinks.section]
+# e.g. /subsection/ instead of /posts/subsection/
+posts = '/:slug/'
 
 [markup]
-  defaultMarkdownHandler = 'goldmark' # Default (everything under [markup] is unless otherwise specified)
-  [markup.goldmark]
-    [markup.goldmark.extensions]
-      definitionList = true
-      footnote = true
-      linkify = true
-      linkifyProtocol = 'https'
-      strikethrough = true
-      table = true
-      taskList = true
-      typographer = true
-    [markup.goldmark.parser]
-      autoHeadingID = true
-      autoHeadingIDType = 'github'
-      [markup.goldmark.parser.attribute]
-        block = false
-        title = true
-    [markup.goldmark.renderer]
-      hardWraps = false
-      unsafe = false
-      xhtml = false
-  [markup.highlight]
-    anchorLineNos = false
-    codeFences = true
-    guessSyntax = false
-    hl_Lines = ''
-    lineAnchors = ''
-    lineNoStart = 1
-    lineNos = true # Not the default
-    lineNumbersInTable = false # Not the default
-    noClasses = true
-    noHl = false
-    style = 'monokai'
-    tabWidth = 4
-  [markup.tableOfContents]
-    endLevel = 3
-    ordered = false
-    startLevel = 2
+defaultMarkdownHandler = 'goldmark' # Default (everything under [markup] is unless otherwise specified)
+[markup.goldmark]
+[markup.goldmark.extensions]
+definitionList = true
+footnote = true
+linkify = true
+linkifyProtocol = 'https'
+strikethrough = true
+table = true
+taskList = true
+typographer = true
+[markup.goldmark.parser]
+autoHeadingID = true
+autoHeadingIDType = 'github'
+[markup.goldmark.parser.attribute]
+block = false
+title = true
+[markup.goldmark.renderer]
+hardWraps = false
+unsafe = false
+xhtml = false
+[markup.highlight]
+anchorLineNos = false
+codeFences = true
+guessSyntax = false
+hl_Lines = ''
+lineAnchors = ''
+lineNoStart = 1
+lineNos = true             # Not the default
+lineNumbersInTable = false # Not the default
+noClasses = true
+noHl = false
+style = 'monokai'
+tabWidth = 4
+[markup.tableOfContents]
+endLevel = 3
+ordered = false
+startLevel = 2
 
 [related]
-  # Default related posts settings
-  includeNewer = false
-  threshold = 80
-  toLower = false
+# Default related posts settings
+includeNewer = false
+threshold = 80
+toLower = false
 [[related.indices]]
-  name = 'keywords'
-  weight = 100
+name = 'keywords'
+weight = 100
 [[related.indices]]
-  name = 'date'
-  weight = 10
+name = 'date'
+weight = 10
 # Remove if not using tags taxonomy
 [[related.indices]]
-  name = 'tags'
-  weight = 80
+name = 'tags'
+weight = 80
 
 [sitemap]
-  # Default sitemap settings
-  changefreq = 'monthly'
-  filename = 'sitemap.xml'
-  priority = 0.5
+# Default sitemap settings
+changefreq = 'monthly'
+filename = 'sitemap.xml'
+priority = 0.5
 
 [frontmatter]
-  # Default frontmatter date settings
-  date = ['date', 'publishDate', 'lastmod']
-  expiryDate = ['expiryDate']
-  lastmod = ['lastmod', ':git', 'date', 'publishDate']
-  publishDate = ['publishDate', 'date']
+# Default frontmatter date settings
+date = ['date', 'publishDate', 'lastmod']
+expiryDate = ['expiryDate']
+lastmod = ['lastmod', ':git', 'date', 'publishDate']
+publishDate = ['publishDate', 'date']
 
 [caches]
-  # Default cache settings
-  [caches.assets]
-    dir = ':resourceDir/_gen'
-    maxAge = -1
-  [caches.getcsv]
-    dir = ':cacheDir/:project'
-    maxAge = -1
-  [caches.getjson]
-    dir = ':cacheDir/:project'
-    maxAge = -1
-  [caches.images]
-    dir = ':resourceDir/_gen'
-    maxAge = -1
-  [caches.modules]
-    dir = ':cacheDir/modules'
-    maxAge = -1
+# Default cache settings
+[caches.assets]
+dir = ':resourceDir/_gen'
+maxAge = -1
+[caches.getcsv]
+dir = ':cacheDir/:project'
+maxAge = -1
+[caches.getjson]
+dir = ':cacheDir/:project'
+maxAge = -1
+[caches.images]
+dir = ':resourceDir/_gen'
+maxAge = -1
+[caches.modules]
+dir = ':cacheDir/modules'
+maxAge = -1
 
 [imaging]
-  # Default image processing settings
-  anchor = 'Smart'
-  bgColor = '#ffffff'
-  hint = 'photo'
-  quality = 75
-  resampleFilter = 'Box'
+# Default image processing settings
+anchor = 'Smart'
+bgColor = '#ffffff'
+hint = 'photo'
+quality = 75
+resampleFilter = 'Box'
 
 [languages]
-  [languages.fr]
-    contentDir = 'content/fr'
-    disabled = false
-    languageCode = 'fr-FR'
-    languageDirection = 'ltr'
-    languageName = 'Français'
-    weight = 1
-    [languages.fr.params]
-      screeenshotTitle = "Les screens de l'équipe"
-      contact_name = "Votre nom..."
-      contact_email = "Votre meilleur e-mail..."
-      contact_placeholder = "Votre petit mot..."
-      button_send = "Envoyer"
-      next_article = 'Prochain article'
-      content_table = "Table de contenu"
-  [languages.en]
-    contentDir = 'content/en'
-    disabled = false
-    languageCode = 'en-US'
-    languageDirection = 'ltr'
-    languageName = 'English'
-    weight = 2
-    [languages.en.params]
-      screeenshotTitle = "Screenshots from the team"
-      contact_name = "Your name..."
-      contact_email = "Your best email..."
-      contact_placeholder = "Your lovely note..."
-      button_send = "Send"
-      next_article = 'Next article'
-      content_table = "Content Table"
+[languages.fr]
+contentDir = 'content/fr'
+disabled = false
+languageCode = 'fr-FR'
+languageDirection = 'ltr'
+languageName = 'Français'
+weight = 1
+[languages.fr.params]
+screeenshotTitle = "Les screens de l'équipe"
+contact_name = "Votre nom..."
+contact_email = "Votre meilleur e-mail..."
+contact_placeholder = "Votre petit mot..."
+button_send = "Envoyer"
+next_article = 'Prochain article'
+content_table = "Table de contenu"
+[languages.en]
+contentDir = 'content/en'
+disabled = false
+languageCode = 'en-US'
+languageDirection = 'ltr'
+languageName = 'English'
+weight = 2
+[languages.en.params]
+screeenshotTitle = "Screenshots from the team"
+contact_name = "Your name..."
+contact_email = "Your best email..."
+contact_placeholder = "Your lovely note..."
+button_send = "Send"
+next_article = 'Next article'
+content_table = "Content Table"
 ### Hugo Pipes
 [minify]
-  disableCSS = false
-  disableHTML = false
-  disableJS = false
-  disableJSON = false
-  disableSVG = false
-  disableXML = false
-  minifyOutput = false
-  [minify.tdewolff]
-    [minify.tdewolff.css]
-      keepCSS2 = true
-      precision = 0
-    [minify.tdewolff.html]
-      keepComments = false
-      keepConditionalComments = true
-      keepDefaultAttrVals = true
-      keepDocumentTags = true
-      keepEndTags = true
-      keepQuotes = false
-      keepWhitespace = false
-    [minify.tdewolff.js]
-      keepVarNames = false
-      noNullishOperator = false
-      precision = 0
-    [minify.tdewolff.json]
-      keepNumbers = false
-      precision = 0
-    [minify.tdewolff.svg]
-      precision = 0
-    [minify.tdewolff.xml]
-      keepWhitespace = false
+disableCSS = false
+disableHTML = false
+disableJS = false
+disableJSON = false
+disableSVG = false
+disableXML = false
+minifyOutput = false
+[minify.tdewolff]
+[minify.tdewolff.css]
+keepCSS2 = true
+precision = 0
+[minify.tdewolff.html]
+keepComments = false
+keepConditionalComments = true
+keepDefaultAttrVals = true
+keepDocumentTags = true
+keepEndTags = true
+keepQuotes = false
+keepWhitespace = false
+[minify.tdewolff.js]
+keepVarNames = false
+noNullishOperator = false
+precision = 0
+[minify.tdewolff.json]
+keepNumbers = false
+precision = 0
+[minify.tdewolff.svg]
+precision = 0
+[minify.tdewolff.xml]
+keepWhitespace = false
 
 ### Netlify settings
 # add redirects/headers
 [outputs]
-  home = ["HTML", "RSS", "REDIRECTS", "HEADERS"]
+home = ["HTML", "RSS", "REDIRECTS", "HEADERS"]
 
 # remove .{ext} from text/netlify
 [mediaTypes."text/netlify"]
-  suffixes = [""]
-  delimiter = ""
+suffixes = [""]
+delimiter = ""
 
 # add output format for netlify _redirects
 [outputFormats.REDIRECTS]
-  mediatype = "text/netlify"
-  baseName = "_redirects"
-  isPlainText = true
-  notAlternative = true
+mediatype = "text/netlify"
+baseName = "_redirects"
+isPlainText = true
+notAlternative = true
 
 # add output format for netlify _headers
 [outputFormats.HEADERS]
-  mediatype = "text/netlify"
-  baseName = "_headers"
-  isPlainText = true
-  notAlternative = true
+mediatype = "text/netlify"
+baseName = "_headers"
+isPlainText = true
+notAlternative = true
